# strata

./: .envrc  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Plans.md  README.md  flake.nix
.devenv/: common-dev.nix  lang-dev.nix  shell-node.nix  shell-python.nix  shell-rust.nix  shell.nix
.github/workflows/: ci.yml
crates/strata-build/: Cargo.toml
crates/strata-build/src/: convert.rs  error.rs  lib.rs  list_child.rs  math.rs  resolve.rs  term.rs  workspace.rs
crates/strata-build/tests/: alias_output.rs  class_attr.rs  doc_scheme.rs  errors.rs  golden.rs  md_compat.rs  misc.rs  nested_lists.rs  record.rs  revises_attr.rs  workspace.rs
crates/strata-cli/: Cargo.toml
crates/strata-cli/examples/: compile_takeokunn.rs
crates/strata-cli/src/: main.rs
crates/strata-cli/tests/: build_cli.rs  context_cli.rs  fmt_cli.rs  render_cli.rs  search_cli.rs  site_cli.rs  workspace_cli.rs  yaml_flow_smoke.rs
crates/strata-cli/tests/common/: mod.rs
crates/strata-context/: Cargo.toml
crates/strata-context/src/: addr.rs  inline.rs  label.rs  lib.rs  render.rs  tests.rs
crates/strata-core/: Cargo.toml
crates/strata-core/src/: lib.rs
crates/strata-html/: Cargo.toml
crates/strata-html/src/: lib.rs
crates/strata-md/: Cargo.toml
crates/strata-md/src/: golden.rs  lib.rs  roundtrip.rs  tests.rs
crates/strata-search/: Cargo.toml
crates/strata-search/src/: lib.rs  query.rs  tests.rs  text.rs
crates/strata-sml/: Cargo.toml
crates/strata-sml/src/: ast.rs  block.rs  error.rs  fmt.rs  frontmatter.rs  gfm_table.rs  inline.rs  lib.rs  record.rs  scan.rs  span.rs  table.rs  value.rs
crates/strata-sml/tests/: attr_lines.rs  fmt_contract.rs  fmt_core.rs  frontmatter.rs  golden.rs  golden_isomorphism.rs  id_tags.rs  inline_parse.rs  list_continuation.rs  nested_lists.rs  table_body.rs
crates/strata-typst/: Cargo.toml
crates/strata-typst/src/: golden.rs  lib.rs  tests.rs
crates/strata-vault/: Cargo.toml
crates/strata-vault/src/: lib.rs
crates/strata-view/: Cargo.toml
crates/strata-view/src/: ast.rs  check.rs  def.rs  eval.rs  lib.rs  manifest.rs  value.rs
crates/strata-view/tests/: integration.rs  workspace.rs
crates/tex2math/: Cargo.toml
crates/tex2math/src/: lib.rs
docs/: CONVERSATION.md  agent-guide-m5b-handoff.md  context-m5a-handoff.md  editor-g2-handoff.md  graph-ui-g1-handoff.md  md-compat-audit.md  md-compat-m6-handoff.md  md-render-handoff.md  sml-agent-guide.md  sml-build-m3-handoff.md  sml-dogfood-m4x-handoff.md  sml-fmt-m2-handoff.md  sml-m4y-handoff.md  sml-parser-design.md  sml-parser-m1-handoff.md  sml-render-m4-handoff.md  sml-spec.md  sml_example_draft.sml  sml_example_formatted.context.md  sml_example_formatted.md  sml_example_formatted.sml  sml_example_formatted.typ  spec-sml-m8-handoff.md  strata-spec.md  strata_markup_design_notes.md  view-def-v1.md  view-v0-handoff.md  view-v1-handoff.md  workspace-m7-handoff.md  workspace-m75-handoff.md
docs/spec-sml/: decisions.sml  strata.toml
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: ClassToggle.tsx  (+5 more)
vault/: resume.yaml  work_history.yaml
(+11 files in other folders)
