[package]
name = "strata-build"
version = "0.1.0"
edition = "2024"

[dependencies]
strata-sml = { path = "../strata-sml" }
strata-core = { path = "../strata-core" }
tex2math = { path = "../tex2math" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
sha2 = "0.10"
